--- a/src/Makefile
+++ b/src/Makefile
@@ -6,11 +6,11 @@ CPPFLAGS = -I../include -I /home/y/include -g
 LDFLAGS = -L/home/y/lib64 -Wl,-rpath,/home/y/lib64
 LIBS = -lrt -lm -lymonsb2
 
-client: $(COMMONOBJ) client.o clientsession.o maclist.o ifinfo.o
-	$(CXX) $(LDFLAGS) $(LIBS) -o udping_client client.o options.o delay.o protocol.o clientsession.o stats.o maclist.o ifinfo.o
+client: $(COMMONOBJ) client.o clientsession.o maclist.o ifinfo.o client.o options.o delay.o protocol.o
+	$(CXX) $(LDFLAGS) $(LIBS) -o udping_client client.o options.o delay.o protocol.o clientsession.o maclist.o ifinfo.o
 
-server: $(COMMONOBJ) server.o serversession.o statswriter.o
-	$(CXX) $(LDFLAGS) $(LIBS) -o udping_server server.o options.o delay.o protocol.o serversession.o stats.o statswriter.o
+server: $(COMMONOBJ) server.o serversession.o statswriter.o delay.o options.o protocol.o stats.o
+	$(CXX) $(LDFLAGS) $(LIBS) -o udping_server server.o delay.o options.o protocol.o serversession.o stats.o statswriter.o
 
 clean:
 	rm -f udping_client udping_server *.o
